<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/personal_layout">
    <RelativeLayout
        style="@style/personal_title_background"
        >
        <ImageView
            android:id="@+id/back"
            style="@style/personal_back"
            />
        <TextView
            style="@style/personal_title"
            android:text="设置"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/tvData"
        android:text="@string/personal_setting_data"
        style="@style/personal_setting_item"
        />
    <View
        style="@style/boldlin"
        />
    <RelativeLayout
        android:id="@+id/push"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/dip12"
        android:paddingRight="@dimen/dip12"
        >
    <TextView
        android:text="接受消息推送"
        style="@style/personal_setting_item_text"
        />
    <ToggleButton
        android:id="@+id/togglebutton"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:textOn=""
        android:textOff=""
        android:background="@drawable/switch_btn"
        android:button="@null"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        />
    </RelativeLayout>
    <View
        style="@style/boldlin"
        />
    <TextView
        android:id="@+id/tvComment"
        android:text="@string/personal_setting_comment"
        style="@style/personal_setting_item"
        />
    <View
        style="@style/boldlin"
        />
    <RelativeLayout
        android:id="@+id/tvClean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dip12"
        android:paddingRight="@dimen/dip12"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/day_edit_color"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/personal_setting_clena"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="14sp"
            android:text="24M"
            android:textColor="@color/day_edit_color"
            />
    </RelativeLayout>
    <View
        style="@style/boldlin"
        />
    <TextView
        android:id="@+id/tvAbout"
        android:text="@string/personal_setting_about"
        style="@style/personal_setting_item"
        />
    <View
        style="@style/boldlin"
        />
    <TextView
        android:id="@+id/tvFeedback"
        android:text="@string/personal_setting_feedback"
        style="@style/personal_setting_item"
        />
    <View
        style="@style/boldlin"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/personal_exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="退出当前账号"
        android:background="@color/home_tab_pressed_color"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="15sp"
        />
</LinearLayout>
