<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/personal_layout">
    <RelativeLayout
        style="@style/personal_title_background"
        >
        <ImageView
            android:id="@+id/ivFeedBack"
            style="@style/personal_back"
            />
        <TextView
            style="@style/personal_title"
            android:text="@string/personal_setting_feedback"
            />
        <TextView
            android:id="@+id/tvPush"
            style="@style/personal_title"
            android:text="@string/personal_setting_push"
            android:layout_alignParentRight="true"
            android:paddingRight="12dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:hint="@string/personal_setting_feedback_hint"
            android:textColorHint="@color/day_edit_hit_color"
            android:textSize="14sp"
            android:gravity="left"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/day_edit_color"
            android:text="0/2500"
            android:paddingRight="4dp"
            android:layout_gravity="right"
            />
    </LinearLayout>
    <View
        style="@style/finelin"
        />
    <View
        android:layout_width="match_parent"
        android:background="@color/background1"
        android:layout_height="wrap_content"
        />
</LinearLayout>
