<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/personal_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_bg"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collp_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/home_tab_pressed_color"
            app:expandedTitleMarginEnd="32dp"
            app:expandedTitleMarginStart="28dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >
            <include layout="@layout/fragment_personal_background"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                app:layout_collapseMode="pin"
                >
                <RelativeLayout
                    android:id="@+id/re1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="18dp"
                    >
                    <ImageView
                        android:id="@+id/tvMsg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/navigation_return"
                        />
                    <TextView
                        android:visibility="gone"
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="啦啦啦"
                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="18sp"
                        />
                    <ImageView
                        android:id="@+id/ivSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/icon_setup"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/personal_fragment"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tvActive"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/day_edit_color"
            android:text="@string/personal_my_active"
            android:background="@color/white"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:drawableRight="@mipmap/turn_right"
            />
        <View
           style="@style/finelin"
            />
        <TextView
            android:id="@+id/tvDynamic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/day_edit_color"
            android:text="@string/personal_my_dynamic"
            android:background="@color/white"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:drawableRight="@mipmap/turn_right"
            />
        <View
            style="@style/finelin"
            />
        <TextView
            android:id="@+id/tvCollect"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/day_edit_color"
            android:text="@string/personal_my_collect"
            android:background="@color/white"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:drawableRight="@mipmap/turn_right"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
